--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=8000
 BACKEND_URL=http://localhost:8000
+MONGO_URI = mongodb+srv://atpxsatyam:ucHTFcCvysdnPDkA@instagram.1elnz.mongodb.net/?retryWrites=true&w=majority&appName=instagram
