--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,5 +11,24 @@
         "src": "/(.*)",
         "dest": "/"
       }
+    ],
+    "headers": [
+        {
+            "source": "/api/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "http://localhost:5173"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, POST, OPTIONS, PUT, DELETE"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "Content-Type"
+                }
+            ]
+        }
     ]
   }
